load(
    "@bazelruby_rules_ruby//ruby:defs.bzl",
    "ruby_binary",
    "ruby_library",
    "ruby_test",
    "ruby_rspec",
)

load(
    "//ign_bazel:cmake_configure_file.bzl",
    "cmake_configure_file",
)
load(
    "//ign_bazel:generate_yaml.bzl",
    "generate_yaml",
)

package(default_visibility = ["//visibility:public"])

SDF_MAJOR_VERSION = 10
SDF_MINOR_VERSION = 0
SDF_PATCH_VERSION = 0
SDF_PROJECT_NAME = "sdformat"
sdf_library_location = "../sdformat/libsdformat10.so"

MSGS_MAJOR_VERSION = 6
MSGS_MINOR_VERSION = 0
MSGS_PATCH_VERSION = 0
MSGS_PROJECT_NAME = "ignition-msgs"
msgs_library_location = "../ign_msgs/libignition-msgs6.so"

TRANSPORT_MAJOR_VERSION = 8
TRANSPORT_MINOR_VERSION = 0
TRANSPORT_PATCH_VERSION = 0
TRANSPORT_PROJECT_NAME = "ignition-transport"
transport_library_location = "../ign_transport/libignition-transport8.so"
transport_log_library_location = "../ign_transport/libignition-transport8-log.so"

FUEL_MAJOR_VERSION = 4
FUEL_MINOR_VERSION = 1
FUEL_PATCH_VERSION = 0
FUEL_PROJECT_NAME = "ignition-fuel-tools"
fuel_library_location = "../ign_fuel_tools/libignition-fuel-tools4.so"

GUI_MAJOR_VERSION = 4
GUI_MINOR_VERSION = 0
GUI_PATCH_VERSION = 0
GUI_PROJECT_NAME = "libignition-gui4"
gui_library_location = "../ign_gui/libignition-gui4.so"

GAZEBO_MAJOR_VERSION = 4
GAZEBO_MINOR_VERSION = 0
GAZEBO_PATCH_VERSION = 0
GAZEBO_PROJECT_NAME = "ignition-gazebo"
gazebo_library_location = "../ign_gazebo/libignition-gazebo4.so"

LAUNCH_MAJOR_VERSION = 3
LAUNCH_MINOR_VERSION = 0
LAUNCH_PATCH_VERSION = 0
LAUNCH_PROJECT_NAME = "ignition-launch"
launch_library_location = "../ign_launch/libignition-launch3.so"

CMAKE_INSTALL_PREFIX = "./ign_tools"
sdfcmds = "    - sdf   : Utilities for SDF files."
transportcmds = "    - topic   : Print information about topics.\n    - service   : Print information about services."
logcmds = "    - log   : Record or playback topics."
msgscmds = "    - msg   : Print information about messages."
fuelcmds = "    - fuel   : Manage simulation resources."
guicmds = "    - gui   : Launch graphical interfaces."
gazebocmds = "    - gazebo   : Run and manage Gazebo."
launchcmds = "    - launch   : Run and manage executables and plugins."

# Generates config.hh based on the version numbers in CMake code.
cmake_configure_file(
    name = "config",
    src = "src/ign.in",
    out = "ign.rb",
    cmakelists = ["CMakeLists.txt"],
    defines = [
        "CMAKE_INSTALL_PREFIX=%s" % (CMAKE_INSTALL_PREFIX),
    ],
    visibility = ["//visibility:public"],
)

ruby_binary(
    name = "ign",
    srcs = ["ign.rb"],
    includes = ["."],
    main = "ign.rb",
    visibility = ["//visibility:public"],
    data = [
        ":sdf",
        ":msgs",
        ":transport",
        ":transport-log",
        ":fuel",
        ":gui",
    ],
)

# Generates config.hh based on the version numbers in CMake code.
cmake_configure_file(
    name = "sdformat.rb",
    src = "//sdformat:src/cmd/cmdsdformat.rb.in",
    out = "cmdsdformat.rb",
    cmakelists = ["//sdformat:CMakeLists.txt"],
    defines = [
        "library_location=%s" % sdf_library_location,
        "PROJECT_VERSION_FULL=%d.%d.%d" % (SDF_MAJOR_VERSION, SDF_MINOR_VERSION, SDF_PATCH_VERSION),  # noqa
        "IGN_LIBRARY_NAME=%s" % [SDF_PROJECT_NAME],
    ],
    visibility = ["//visibility:public"],
)
# Generates config.hh based on the version numbers in CMake code.
cmake_configure_file(
    name = "msgs.rb",
    src = "//ign_msgs:src/cmd/cmdmsgs.rb.in",
    out = "cmdmsgs.rb",
    cmakelists = ["//ign_msgs:CMakeLists.txt"],
    defines = [
        "library_location=%s" % msgs_library_location,
        "PROJECT_VERSION_FULL=%d.%d.%d" % (MSGS_MAJOR_VERSION, MSGS_MINOR_VERSION, MSGS_PATCH_VERSION),  # noqa
        "IGN_LIBRARY_NAME=%s" % [MSGS_PROJECT_NAME],
    ],
    visibility = ["//visibility:public"],
)
# Generates config.hh based on the version numbers in CMake code.
cmake_configure_file(
    name = "transport.rb",
    src = "//ign_transport:src/cmd/cmdtransport.rb.in",
    out = "cmdtransport.rb",
    cmakelists = ["//ign_transport:CMakeLists.txt"],
    defines = [
        "library_location=%s" % transport_library_location,
        "PROJECT_VERSION_FULL=%d.%d.%d" % (TRANSPORT_MAJOR_VERSION, TRANSPORT_MINOR_VERSION, TRANSPORT_PATCH_VERSION),  # noqa
        "IGN_LIBRARY_NAME=%s" % [TRANSPORT_PROJECT_NAME],
    ],
    visibility = ["//visibility:public"],
)
# Generates config.hh based on the version numbers in CMake code.
cmake_configure_file(
    name = "log.rb",
    src = "//ign_transport/log:src/cmd/cmdlog.rb.in",
    out = "cmdlog.rb",
    cmakelists = ["//ign_transport/log:src/CMakeLists.txt"],
    defines = [
        "log_library_location=%s" % transport_log_library_location,
        "PROJECT_VERSION_FULL=%d.%d.%d" % (TRANSPORT_MAJOR_VERSION, TRANSPORT_MINOR_VERSION, TRANSPORT_PATCH_VERSION),  # noqa
        "IGN_LIBRARY_NAME=%s" % [TRANSPORT_PROJECT_NAME],
    ],
    visibility = ["//visibility:public"],
)

# Generates config.hh based on the version numbers in CMake code.
cmake_configure_file(
    name = "fuel.rb",
    src = "//ign_fuel_tools:src/cmd/cmdfuel.rb.in",
    out = "cmdfuel.rb",
    cmakelists = ["//ign_fuel_tools:CMakeLists.txt"],
    defines = [
        "library_location=%s" % fuel_library_location,
        "PROJECT_VERSION_FULL=%d.%d.%d" % (FUEL_MAJOR_VERSION, FUEL_MINOR_VERSION, FUEL_PATCH_VERSION),  # noqa
        "IGN_LIBRARY_NAME=%s" % [FUEL_PROJECT_NAME],
    ],
    visibility = ["//visibility:public"],
)
# Generates config.hh based on the version numbers in CMake code.
cmake_configure_file(
    name = "gui.rb",
    src = "//ign_gui:src/cmd/cmdgui.rb.in",
    out = "cmdgui.rb",
    cmakelists = ["//ign_gui:CMakeLists.txt"],
    defines = [
        "library_location=%s" % gui_library_location,
        "PROJECT_VERSION_FULL=%d.%d.%d" % (GUI_MAJOR_VERSION, GUI_MINOR_VERSION, GUI_PATCH_VERSION),  # noqa
        "IGN_LIBRARY_NAME=%s" % GUI_PROJECT_NAME,
    ],
    visibility = ["//visibility:public"],
)
'''
# Generates config.hh based on the version numbers in CMake code.
cmake_configure_file(
    name = "gazebo.rb",
    src = "//ign_gazebo:src/cmd/cmdgazebo.rb.in",
    out = "cmdgazebo.rb",
    cmakelists = ["//ign_gazebo:src/CMakeLists.txt"],
    defines = [
        "library_location=%s" % gazebo_library_location,
        "PROJECT_VERSION_FULL=%d.%d.%d" % (GAZEBO_MAJOR_VERSION, GAZEBO_MINOR_VERSION, GAZEBO_PATCH_VERSION),  # noqa
        "IGN_LIBRARY_NAME=%s" % [GAZEBO_PROJECT_NAME],
    ],
    visibility = ["//visibility:public"],
)
# Generates config.hh based on the version numbers in CMake code.
cmake_configure_file(
    name = "launch.rb",
    src = "//ign_launch:src/cmdlaunch.rb.in",
    out = "cmdlaunch.rb",
    cmakelists = ["//ign_launch:CMakeLists.txt"],
    defines = [
        "library_location=%s" % launch_library_location,
        "PROJECT_VERSION_FULL=%d.%d.%d" % (LAUNCH_MAJOR_VERSION, LAUNCH_MINOR_VERSION, LAUNCH_PATCH_VERSION),  # noqa
        "IGN_LIBRARY_NAME=%s" % [LAUNCH_PROJECT_NAME],
    ],
    visibility = ["//visibility:public"],
)
'''
generate_yaml(
    name = "sdf",
    library_name = SDF_PROJECT_NAME,
    library_version = "%d.%d.%d" % (SDF_MAJOR_VERSION, SDF_MINOR_VERSION, SDF_PATCH_VERSION),
    commands = sdfcmds,
    ruby_target = "sdformat.rb",
)
generate_yaml(
    name = "msgs",
    library_name = MSGS_PROJECT_NAME,
    library_version = "%d.%d.%d" % (MSGS_MAJOR_VERSION, MSGS_MINOR_VERSION, MSGS_PATCH_VERSION),
    commands = msgscmds,
    ruby_target = "msgs.rb",
)
generate_yaml(
    name = "transport",
    library_name = TRANSPORT_PROJECT_NAME,
    library_version = "%d.%d.%d" % (TRANSPORT_MAJOR_VERSION, TRANSPORT_MINOR_VERSION, TRANSPORT_PATCH_VERSION),
    commands = transportcmds,
    ruby_target = "transport.rb",
)
generate_yaml(
    name = "transport-log",
    library_name = TRANSPORT_PROJECT_NAME,
    library_version = "%d.%d.%d" % (TRANSPORT_MAJOR_VERSION, TRANSPORT_MINOR_VERSION, TRANSPORT_PATCH_VERSION),
    commands = logcmds,
    ruby_target = "log.rb",
)
generate_yaml(
    name = "fuel",
    library_name = FUEL_PROJECT_NAME,
    library_version = "%d.%d.%d" % (FUEL_MAJOR_VERSION, FUEL_MINOR_VERSION, FUEL_PATCH_VERSION),
    commands = fuelcmds,
    ruby_target = "fuel.rb",
)
generate_yaml(
    name = "gui",
    library_name = GUI_PROJECT_NAME,
    library_version = "%d.%d.%d" % (GUI_MAJOR_VERSION, GUI_MINOR_VERSION, GUI_PATCH_VERSION),
    commands = guicmds,
    ruby_target = "gui.rb",
)
'''
generate_yaml(
    name = "gazebo",
    library_name = GAZEBO_PROJECT_NAME,
    library_version = "%d.%d.%d" % (GAZEBO_MAJOR_VERSION, GAZEBO_MINOR_VERSION, GAZEBO_PATCH_VERSION),
    commands = gazebocmds,
    ruby_target = "gazebo.rb",
)
generate_yaml(
    name = "launch",
    library_name = LAUNCH_PROJECT_NAME,
    library_version = "%d.%d.%d" % (LAUNCH_MAJOR_VERSION, LAUNCH_MINOR_VERSION, LAUNCH_PATCH_VERSION),
    commands = launchcmds,
    ruby_target = "launch.rb",
)
'''
