<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz-tools3</name>
  <version>3.0.0</version>
  <description>Gazebo Tools: Entrypoint to Gazebo's command line interface</description>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-tools</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake3</build_depend>

  <exec_depend>ruby</exec_depend>

  <test_depend>rubocop</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
